# rust-ytmusic-api

./: Cargo.toml  README.md
examples/: 00_new.rs  01_init.rs  02_init_with_options.rs  all_methods.rs  common.rs  fetch_album.rs  fetch_artist.rs  fetch_artist_albums.rs  fetch_artist_songs.rs  fetch_home.rs  fetch_lyrics.rs  fetch_playlist.rs  fetch_playlist_tracks.rs  fetch_song.rs  fetch_video.rs  fetch_watch_queue.rs  find.rs  find_albums.rs  find_artists.rs  find_playlists.rs  find_songs.rs  find_videos.rs  raw_search.rs  raw_song_search.rs  suggest.rs
src/: client.rs  constants.rs  error.rs  lib.rs
src/parsers/: album.rs  artist.rs  common.rs  mod.rs  playlist.rs  search.rs  song.rs  video.rs
src/types/: mod.rs
src/utils/: filters.rs  mod.rs  traverse.rs
