[package]
name = "ytmusic-rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/afadhili/rust-ytmusic-rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "cookies",
  "gzip",
  "rustls-tls",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
url = "2"

[dev-dependencies]
anyhow = "1"
