[package]
name = "rs-ytmusic-api"
version = "0.1.1"
description = "A Rust client library for interacting with YouTube Music's internal API"
edition = "2021"
repository = "https://github.com/afadhili/rust-ytmusic-api"
license = "GPL-3.0"
readme = "README.md"
keywords = ["youtube", "music", "ytmusic", "api", "client"]
categories = ["api-bindings", "multimedia::audio"]
authors = ["afadhili"]
exclude = ["target/", ".git/", ".github/", "examples/"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "cookies",
  "gzip",
  "rustls-tls",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
url = "2"

[dev-dependencies]
anyhow = "1"
